--- a/src/main/resources/templates/pages/delete.html
+++ b/src/main/resources/templates/pages/delete.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html lang="ru">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
-    <title>Edit user</title>
+    <meta charset="UTF-8">
+    <title>Delete user</title>
 </head>
 <body>
 <form th:method="post" th:action="@{/admin/delete}" th:object="${user}">
     <input type="hidden" th:field="*{id}" />
     <label for="name">First Name:</label>
     <input type="text" th:field="*{firstName}" id="name"/>
-    <br/>
+    <br>
     <label for="lastName">Last Name:</label>
     <input type="text" th:field="*{lastName}" id="lastName"/>
-    <br/>
+    <br>
     <label for="age">Age:</label>
     <input type="text" th:field="*{age}" id="age"/>
-    <br/>
-    <br/>
+    <br>
+    <br>
     <label>Delete</label>
     <input type="submit" value="Confirmation delete"/>
 </form>
-<br/>
-<br/>
+<br>
+<br>
 <form th:action="@{/logout}" th:method="POST">
     <input type="submit" value="Выйти из кабинета">
 </form>
