--- a/src/main/resources/templates/pages/edit.html
+++ b/src/main/resources/templates/pages/edit.html
@@ -1,40 +1,37 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<html lang="ru">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+    <meta charset="UTF-8">
     <title>Edit user</title>
 </head>
 <body>
-<!--<form th:method="POST" th:action="@{/user/edit(id=${editUser.getId()})}" th:object="${user}">-->
 <form th:method="post" th:action="@{/user/edit}" th:object="${user}">
     <input type="hidden" th:field="*{id}" />
     <input type="hidden" th:field="*{login}" />
     <input type="hidden" th:field="*{password}" />
     <label for="name">First Name:</label>
     <input type="text" th:field="*{firstName}" id="name"/>
-    <br/>
+    <br>
     <label for="lastName">Last Name:</label>
     <input type="text" th:field="*{lastName}" id="lastName"/>
-    <br/>
+    <br>
     <label for="age">Age:</label>
     <input type="text" th:field="*{age}" id="age"/>
     <br>
     <label for="role1">Role</label>
     <input type="text" id="role1"
-           th:each="roles : ${user.getRoles()}"
-           th:value="${roles.getAuthority().replace('ROLE_', '')}"
+           th:each="role : ${user.getRoles()}"
+           th:value="${role.getAuthority().replace('ROLE_', '')}"
            name="rolesList"
            th:readonly="${not #authorization.expression('hasRole(''ROLE_ADMIN'')')}"
     />
-    <br/>
-    <br/>
+    <br>
+    <br>
     <label>Save</label>
     <input type="submit" value="Update"/>
 </form>
-<br/>
-<br/>
+<br>
+<br>
 <form th:action="@{/logout}" th:method="POST">
     <input type="submit" value="Выйти из кабинета">
 </form>
