--- a/src/main/resources/templates/pages/auth/login.html
+++ b/src/main/resources/templates/pages/auth/login.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+    <meta charset="UTF-8">
     <title>Login page</title>
 </head>
 <body>
 <form th:action="@{/login}" method="post">
-    <div>
-        <input type="text" name="username" placeholder="Логин"/>
-    </div>
-    <div>
-        <input type="password" name="password" placeholder="Пароль"/>
-    </div>
+    <input type="text" name="username" placeholder="Login"/>
+    <br>
+    <input type="password" name="password" placeholder="Password"/>
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-<!--    <label for="login">Введите логин: </label>-->
-<!--    <input type="text" name="usename" id="login"/>-->
-<!--    <br/>-->
-<!--    <label for="password">Введите пароль: </label>-->
-<!--    <input type="password" name="password" id="password"/>-->
-    <br/>
-    <input type="submit" value="Вход"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=/registration>Регистрация</a>
+    <br>
+    <br>
+    <input type="submit" value="Enter"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=/registration>Registration</a>
     <div th:if="${param.error}" style="color: red">
         Неправильные имя или пароль
     </div>
-<!--    <div th:if="${param.logout}">-->
-<!--        You have been logged out.</div>-->
+    <!--    <div th:if="${param.logout}">-->
+    <!--        You have been logged out.</div>-->
 </form>
 </body>
 </html>
