--- a/src/main/resources/templates/pages/edit.html
+++ b/src/main/resources/templates/pages/edit.html
@@ -5,7 +5,7 @@
     <title>Edit user</title>
 </head>
 <body>
-<form th:method="post" th:action="@{/user/edit}" th:object="${user}">
+<form th:method="post" th:action="@{/admin/edit}" th:object="${user}">
     <input type="hidden" th:field="*{id}" />
     <input type="hidden" th:field="*{login}" />
     <input type="hidden" th:field="*{password}" />
